refactor: remove unused parameters from helper method signatures